kubernetes/infrastructure/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  selector:
    app: authelia
  ports:
    - port: 9091
      targetPort: http
      name: http
