kubernetes/infrastructure/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${DOMAIN}`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls: {}
